--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "pnpm run build"
+    "prepare": "pnpm run build",
+    "prebuild": "rm -rf ./dist",
+    "postbuild": "tsc --project tsconfig.dts.json"
   },
   "files": [
     "dist"
@@ -20,6 +22,7 @@
       "require": "./dist/dataviz.umd.js"
     }
   },
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
