--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -11,7 +11,6 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
 
     /* Linting */
@@ -19,6 +18,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "emitDeclarationOnly": true,
     "baseUrl": ".",
     "declaration": true,
     "outDir": "./dist",
@@ -26,9 +26,9 @@
       "@/*": [
         "./src/*",
       ],
-      "dataviz": [ "./src/components/index.ts" ]
+      "dataviz": [ "./src/components/index.d.ts" ]
     }
   },
-  "include": ["src"],
+  "include": ["src/components/index.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
