--- a/app/package.json
+++ b/app/package.json
@@ -7,31 +7,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "prepare": "pnpm run build",
-    "prebuild": "rm -rf ./dist",
-    "postbuild": "tsc --project tsconfig.dts.json"
+    "preview": "vite preview"
   },
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/dataviz.es.js",
-      "require": "./dist/dataviz.umd.js"
-    }
-  },
-  "types": "./dist/index.d.ts",
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.17.3",
-    "@uiw/react-markdown-preview": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.394.0",
+    "parse-numeric-range": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-json-view-lite": "^1.4.0",
